// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`interleaved-blocks.ts - typescript-verify > interleaved-blocks.ts 1`] = `
/* Copyright header comment */

// CommentLine that will attach to the first import

/* CommentBlock that will attach to the first import */

// First import attached CommentLine
import thirdParty0 from "third-party0";
import something3 from "@core/something3";
import thirdDisco0 from "third-disco0";
import otherthing3 from "@core/otherthing3";
// CommentLine attached to import
import { a } from "b" with { type: "json" };

import anotherSameLevelRelativePath3 from "./anotherSameLevelRelativePath3";
import something0 from "@core/something0";

import { b } from "r" with { type: "json" };


function add(a,b) {
  return a + b;
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* Copyright header comment */

// CommentLine attached to import
import { a } from "b" with { type: "json" };
import { b } from "r" with { type: "json" };
import thirdDisco0 from "third-disco0";
// CommentLine that will attach to the first import

/* CommentBlock that will attach to the first import */

// First import attached CommentLine
import thirdParty0 from "third-party0";
import otherthing3 from "@core/otherthing3";
import something0 from "@core/something0";
import something3 from "@core/something3";
import anotherSameLevelRelativePath3 from "./anotherSameLevelRelativePath3";

function add(a, b) {
    return a + b;
}

`;

exports[`multi-block-header.ts - typescript-verify > multi-block-header.ts 1`] = `
/* Copyright header comment */

/* Secondary header CommentBlock */

// First import attached CommentLine
import thirdParty0 from "third-party0";
import something3 from "@core/something3";
import thirdDisco0 from "third-disco0";
import otherthing3 from "@core/otherthing3";
// CommentLine attached to import
import { a } from "b" with { type: "json" };

import anotherSameLevelRelativePath3 from "./anotherSameLevelRelativePath3";
import something0 from "@core/something0";

import { b } from "r" with { type: "json" };


function add(a,b) {
  return a + b;
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* Copyright header comment */

/* Secondary header CommentBlock */

// CommentLine attached to import
import { a } from "b" with { type: "json" };
import { b } from "r" with { type: "json" };
import thirdDisco0 from "third-disco0";
// First import attached CommentLine
import thirdParty0 from "third-party0";
import otherthing3 from "@core/otherthing3";
import something0 from "@core/something0";
import something3 from "@core/something3";
import anotherSameLevelRelativePath3 from "./anotherSameLevelRelativePath3";

function add(a, b) {
    return a + b;
}

`;

exports[`single-block-header.ts - typescript-verify > single-block-header.ts 1`] = `
/* Copyright header comment */

// First import attached CommentLine
import thirdParty0 from "third-party0";
import something3 from "@core/something3";
import thirdDisco0 from "third-disco0";
import otherthing3 from "@core/otherthing3";
// CommentLine attached to import
import { a } from "b" with { type: "json" };

import anotherSameLevelRelativePath3 from "./anotherSameLevelRelativePath3";
import something0 from "@core/something0";

import { b } from "r" with { type: "json" };


function add(a,b) {
  return a + b;
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* Copyright header comment */

// CommentLine attached to import
import { a } from "b" with { type: "json" };
import { b } from "r" with { type: "json" };
import thirdDisco0 from "third-disco0";
// First import attached CommentLine
import thirdParty0 from "third-party0";
import otherthing3 from "@core/otherthing3";
import something0 from "@core/something0";
import something3 from "@core/something3";
import anotherSameLevelRelativePath3 from "./anotherSameLevelRelativePath3";

function add(a, b) {
    return a + b;
}

`;
